--- a/app.css
+++ b/app.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Tilt+Prism&display=swap');*{
+@import url('https://fonts.googleapis.com/css2?family=Bungee+Inline&family=Foldit:wght@500&family=Monoton&display=swap');
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -16,7 +17,31 @@ body{
     grid-template-columns: 1fr;
     gap: 20px;
     padding: 20px;
-}.time-crono{
-    font-family: 'Til Prism';
+}.crono-container .time-container{
+    font-family: 'Bungee Inline';
     text-align: center;
+    text-shadow: 1px 20px 15px #000;
+    padding: 20px;
+}.crono-container .time-container{
+    font-size: 3rem;
+    color: #fff;
+}.crono-container .butons-crono{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    padding: 20px;
+}.crono-container .butons-crono button{
+    font-size: 1.5rem;
+    padding: 10px 20px;
+    outline: 0px;
+    border-radius: 10px;
+    cursor: pointer;
+    background-color: rgba(40, 40, 40, 1);
+    color: #fff
+}.crono-container .butons-crono button:disabled{
+    background-color: rgba(60, 60, 60, 1);
+}.crono-container .butons-crono button:hover{
+    background-color: rgba(50, 50, 50, 1);
+}.crono-container .butons-crono button:disabled:hover{
+    background-color: rgba(60, 60, 60, 1);
 }
