--- a/app.css
+++ b/app.css
@@ -3,45 +3,48 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Bungee Inline';
 }
 body{
-    width: 100%;
     height: 100vh;
-    display: grid;
-    place-items: center;
-    background-color: rgba(60, 60, 60, 1);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: linear-gradient(120deg, #fff, #ff0054, #fff);
 }.crono-container{
-    width: 100%;
-    max-width: 400px;
-    display: grid;
-    grid-template-columns: 1fr;
-    gap: 20px;
-    padding: 20px;
+    width: 550px;
+    height: 250px;
+    display: block;
+    align-items: center;
+    justify-content: center;
+    background: transparent;
+    box-shadow: 0px 8px 10px rgba(0, 0, 0, .5);
 }.crono-container .time-container{
-    font-family: 'Bungee Inline';
     text-align: center;
-    text-shadow: 1px 20px 15px #000;
     padding: 20px;
 }.crono-container .time-container{
     font-size: 3rem;
     color: #fff;
 }.crono-container .butons-crono{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 20px;
-    padding: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
 }.crono-container .butons-crono button{
-    font-size: 1.5rem;
-    padding: 10px 20px;
-    outline: 0px;
-    border-radius: 10px;
+    width: 120px;
+    height: 60px;
+    border: none;
     cursor: pointer;
-    background-color: rgba(40, 40, 40, 1);
-    color: #fff
+    color: #fff;
+    background: linear-gradient(120deg, #ff0054,#fff,#ff0054);
+    border-radius: 3px;
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, .3);
 }.crono-container .butons-crono button:disabled{
-    background-color: rgba(60, 60, 60, 1);
+    border: none;
+    background: linear-gradient(120deg, #ff0054,#f1f106,#ff0054);
 }.crono-container .butons-crono button:hover{
-    background-color: rgba(50, 50, 50, 1);
+    border: none;
+    background: linear-gradient(120deg, #ff0054,#fff,#ff0054);
 }.crono-container .butons-crono button:disabled:hover{
-    background-color: rgba(60, 60, 60, 1);
+    border: none;
+    background: linear-gradient(120deg, #ff0054,#f1f106,#ff0054);
 }
